# panoramix

./: README.md  main.py  pyproject.toml  setup.py
panoramix/: contract.py  decompiler.py  folder.py  function.py  loader.py  matcher.py  postprocess.py  prettify.py  rewriter.py  simplify.py  sparser.py  stack.py  vm.py  whiles.py
panoramix/core/: algebra.py  arithmetic.py  masks.py  memloc.py  variants.py
panoramix/utils/: helpers.py  opcode_dict.py  signatures.py
